20220524:
 * changed directory ck2-repo-mlops to cm-devops

20220517:
 * Changed CM_PATH_LIST to +PATH
 * Added general support for +ENV that is expanded to ENV=val1;val2;...:${ENV}

20220511:
 * Better handle exceptions in utils.download_file
 * Added support for variations in intelligent components (ic)
 * Fixed bugs in IC
 * Added "_" prefix in tags to specify variation of IC
 * Record env.sh in "installed artifacts even if bat file is not executed
 * Fixed experiment directory naming on Windows
 * Added "cm version ic" (#233)
